--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="about-image">
                 <div class="image">
-                    <img src="./images/profile2.jpg" alt="Sutharsan" srcset="">
+                    <img src="./profile2.jpg" alt="Sutharsan" srcset="">
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
         <div class="blocks">
             <div class="block1">
                 <div class="edu">
-                    <img src="images/logo1.jpg" alt="MSEC Logo">
+                    <img src="./logo1.jpg" alt="MSEC Logo">
                 </div>
                 <div class="detail">
                     <span>
@@ -94,7 +94,7 @@
             </div><br>
             <div class="block2">
                 <div class="edu">
-                    <img src="images/logo2.jpg" alt="MSEC Logo">
+                    <img src="logo2.jpg" alt="MSEC Logo">
                 </div>
                 <div class="detail">
                     <span>
