--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul id="nav-links">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <!-- <li><a href="#project">Projects</a></li> -->
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -113,97 +113,71 @@
             </div>
         </div>
     </section>
-    <section id="project" class="project">
-        <!-- <div class="projects">
-            <h3>My Projects</h3>
-            <div class="list">
-                <div class="list1">
-                    <div class="objects">
-                        <div class="obj" data-title="SCR-Based Battery Charger" data-type="Electronics (Hardware)">
-                            <img src="images/project1.png">
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h4>SCR based battery charger</h4>
-                        <p>Developed an efficient battery charging system using SCRs (Silicon Controlled Rectifiers).
-                            Optimized charging efficiency and reliability through advanced Silicon Controlled Rectifier
-                            technology.
-                        </p>
-                    </div>
-                </div>
-                <div class="list2">
-                    <div class="objects">
-                        <div class="obj" data-title="Design of Slotted Patch Antenna in HFSS(ongoing)"
-                            data-type="Communication (Software)">
-                            <img src="images/project5.png">
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h4>Design of Slotted Patch Antenna in HFSS(ongoing)</h4>
-                        <p>
-                            This project explores a slotted patch antenna combined with a metasurface superstrate.
-                            The slotted design facilitates dual-band operation, while the metasurface enhances gain and
-                            bandwidth,
-                            providing a compact and efficient solution for modern communication needs.
-                        </p>
-                    </div>
-                </div>
-                <div class="list3">
-                    <div class="objects">
-                        <div class="obj" data-title="Captured Chronicles - Photograph Gallery"
-                            data-type="A Responsive Website">
-                            <img src="images/project3.png">
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h4>Captured Chronnicles</h4>
-                        <p> A personal photography portfolio website showcasing my passion for capturing everyday
-                            moments.
-                            Built with HTML, CSS, and JavaScript, this project is my first step into web development,
-                            featuring a responsive design and dynamic photo gallery to highlight my journey in
-                            photography.
-                        </p>
-                        <a href="https://github.com/s-sutharsan-20/Captured-Chronicles">Repository</a>
-                    </div>
-                </div>
-                <div class="list4">
-                    <div class="objects">
-                        <div class="obj" data-title="Futuretech Institution - College Admission portal"
-                            data-type="Full-Stack Website">
-                            <img src="images/project4.png">
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h4>Future Institution</h4>
-                        <p>FutureTech Institution's website that automates the engineering admission process by
-                            collecting student details, calculating cutoff scores, and allocating courses based on
-                            preferences.
-                            Displays results on the website, enhancing transparency and efficiency. Built with PHP,
-                            MySQL, HTML5 and CSS.
-                        </p>
-                        <a
-                            href="https://github.com/s-sutharsan-20/Automated-Engineering-Admission-Processing-System">Repository</a>
-                    </div>
-                </div>
-                <div class="list5">
-                    <div class="objects">
-                        <div class="obj" data-title="MSEC - College Admission portal" data-type="Designed for MepExpo">
-                            <img src="images/project6.png">
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h4>MSEC Admission Portal</h4>
-                        <p>A web-based system that automates the engineering admission process by collecting student
-                            details, calculating cutoff scores, and allocating courses based on preferences.
-                            Displays results on the website, enhancing transparency and efficiency. Designed for
-                            MepExpo.
-                        </p>
-                        <a
-                            href="https://github.com/s-sutharsan-20/Automated-Engineering-Admission-Processing-System">Repository</a>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+    <section id="experience" class="experience">
+       <div class="experience">
+  <h3 style="margin-top: 10%;">My Experience</h3>
+  <div class="list">
+    <div class="list1">
+      <div class="objects">
+        <div class="obj" data-title="Business Development Associate" data-type="Gandalf IT Services, Gurgaon">
+          <img style="width: 100%; height: 138px;" src="./project1.webp" alt="Gandalf IT Services Logo">
+        </div>
+      </div>
+      <div class="info">
+        <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
+        <p>Worked on lead generation, client relationship management, and pre-sales communication to drive software service adoption. Contributed to business growth by identifying and converting potential clients.</p>
+      </div>
+    </div>
+    <div class="list2">
+      <div class="objects">
+        <div class="obj" data-title="IT Support Engineer" data-type="Demoooooooooooo">
+          <img style="width: 100%; height: 276px;" src="./project2.png" alt="Expedia Logo">
+        </div>
+      </div>
+      <div class="info">
+        <h4>FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
+        <p>Implemented responsive UI/UX designs & Functionallity. Deployed applications to cloud platforms.
+Developed RESTful APIs. Troubleshot and debugged complex issues in both client and server side.
+• Design and maintain relational databases using SQL for efficient data storage, retrieval, optimization.
+• Collaborated with cross-functional teams of designers, QA engineers, and product managers.</p>
+      </div>
+    </div>
+
+    <div class="list3">
+      <div class="objects">
+        <div class="obj" data-title="Full Stack Developer" data-type="Al Adil Supermarket, Dubai">
+          <img style="width: 100%; height: 319px;" src="./cropped-logo-3-1.png" alt="Al Adil Logo">
+        </div>
+      </div>
+      <div class="info">
+        <h4>IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
+        <p>Provided technical support and troubleshooting for hardware, software, and network issues.
+• Maintained and updated IT infrastructure, ensuring optimal system performance and security.
+• Performed routine system and network monitoring, backups, and updates.
+• Collaborated with vendors and other departments to resolve complex IT issues efficiently.
+• Managed user accounts, permissions, and access rights through Active Directory.</p>
+      </div>
+    </div>
+
+    <div class="list4">
+      <div class="objects">
+        <div class="obj" data-title="Intern - Web Developer" data-type="XYZ Tech Solutions">
+          <img src="./createch logo.png.crdownload" alt="XYZ Tech Logo">
+        </div>
+      </div>
+      <div class="info">
+        <h4>Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
+        <p>Employment Assistance for Ex- Servicemen Officers for DGR (Ministry of Defence) Indian Army.
+Maintaining their software on weekly basis & update which is provided by DGR.
+• Pharmaceutical Software solution for Army Hospital to manage and monitor inventory stocks efficiently.
+This system ensures that all pharmacy stock levels are tracked in real-time and provides automated alerts
+when stock quantities fall below predefined thresholds, improving inventory control and preventing stock
+outs.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
     </section>
     <div class="contact" id="contact">
         <div class="container">
