--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
       </div>
       <div class="info">
         <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
-        <p>Worked on lead generation, client relationship management, and pre-sales communication to drive software service adoption. Contributed to business growth by identifying and converting potential clients.</p>
+        <p>Support and manage Retail ERP systems Microsoft Dynamics, GoFrugal, or custom solutions. Handle
+virtualized environments using VMware or Hyper-V, TCP/IP, VLANs, firewalls, and VPNs.
+• Maintain and support POS systems used in retail stores and AWS, Azure, or Google Cloud.
+• Ensure smooth operation of servers, networks, and hardware across all locations.</p>
       </div>
     </div>
     <div class="list2">
