--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="navbar">
     <div class="container">
       <div class="logo">
-        <a href="#" target="_blank"><strong>Portfolio</strong></a>
+        <a href="#" target="_blank"><strong>PORTFOLIO</strong></a>
       </div>
 
       <!-- Hamburger icon for mobile -->
@@ -35,7 +35,7 @@
     <div class="header">
         <div class="box">
             <div class="details">
-                <h2>Hello!</h2>
+                <h2 >Hello!</h2>
                 <h3>I’m Mohit,</h3>
                 <p>
                     I have 6 years of combined experience in IT support and software development, skilled in troubleshooting, system maintenance, and coding. I have worked with clients in Dubai’s and India in aviation, retail, and manufacturing sectors, delivering efficient technical support and innovative IT solutions. My developer background helps me bridge support and development, automate tasks, and optimize workflows effectively. 
@@ -168,7 +168,7 @@ Developed RESTful APIs. Troubleshot and debugged complex issues in both client a
     <div class="list4">
       <div class="objects">
         <div class="obj" data-title="Intern - Web Developer" data-type="XYZ Tech Solutions">
-          <img src="./createchimage.png.crdownload" alt="XYZ Tech Logo">
+          <img src="./createch.png" alt="">
         </div>
       </div>
       <div class="info">
@@ -199,24 +199,22 @@ outs.</p>
             </div>
         </div>
     </div>
+    
     <footer>
-        <div class="main-footer">
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/nailwalmohit/" target="_blank"><i class="fab fa-linkedin"
-                        style='font-size:24px'></i></a><br>
-                <a href="https://www.instagram.com/positve_electron/" target="_blank"><i class="fab fa-instagram"
-                        style='font-size:24px'></i></a><br>
-                <a href="https://x.com/Mohitnailwal1" target="_blank"><i class="fab fa-twitter"
-                        style='font-size:24px'></i></a><br>
-                <a href="https://github.com/MohitNailwal" target="_blank"><i class="fab fa-github"
-                        style='font-size:24px'></i></a><br>v
-                <a href="tel:+91 6380657002"><i class="fa fa-phone" style='font-size:20px'></i></a> <br>
-                <a href="mailto:nailwalmohit28@gmail.com" target="_blank"><i class="fas fa-envelope"
-                        style='font-size:24px'></i></a>
-            </div>
+    <div class="main-footer">
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/nailwalmohit/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/positve_electron/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/Mohitnailwal1" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/MohitNailwal" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="tel:+91 6380657002"><i class="fa fa-phone"></i></a>
+            <a href="mailto:nailwalmohit28@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
         </div>
-    </footer>
- <script>
+    </div>
+</footer>
+
+
+ <script>   
     const hamburger = document.getElementById('hamburger');
     const navLinks = document.getElementById('nav-links');
 
