--- a/index.html
+++ b/index.html
@@ -14,36 +14,41 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-  <div class="navbar">
-    <div class="container">
-      <div class="logo">
-        <a href="#" target="_blank"><strong>PORTFOLIO</strong></a>
-      </div>
+    <div class="navbar">
+        <div class="container">
+            <div class="logo">
+                <a href="#" target="_blank"><strong>PORTFOLIO</strong></a>
+            </div>
 
-      <!-- Hamburger icon for mobile -->
-      <div id="hamburger"><i class="fas fa-bars"></i></div>
+            <!-- Hamburger icon for mobile -->
+            <div id="hamburger"><i class="fas fa-bars"></i></div>
 
-      <ul id="nav-links">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+            <ul id="nav-links">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
     <div class="header">
         <div class="box">
             <div class="details">
-                <h2 >Hello!</h2>
+                <h2>Hello!</h2>
                 <h3>I’m Mohit,</h3>
                 <p>
-                    I have 6 years of combined experience in IT support and software development, skilled in troubleshooting, system maintenance, and coding. I have worked with clients in Dubai’s and India in aviation, retail, and manufacturing sectors, delivering efficient technical support and innovative IT solutions. My developer background helps me bridge support and development, automate tasks, and optimize workflows effectively. 
-                   
+                    I have 6 years of combined experience in IT support and software development, skilled in
+                    troubleshooting, system maintenance, and coding. I have worked with clients in Dubai’s and India in
+                    aviation, retail, and manufacturing sectors, delivering efficient technical support and innovative
+                    IT solutions. My developer background helps me bridge support and development, automate tasks, and
+                    optimize workflows effectively.
+
                 </p><br>
                 <div class="btns">
                     <a href="https://drive.google.com/file/d/1R9irB0j0kjqRYjLSoYbLubamfXXk88zX/view?usp=drive_link"
-                     target="_blank" class="btn">Resume</a>
+                        target="_blank" class="btn">Resume</a>
                     <a href="#contact" class="btn">Contact Me</a>
                 </div>
             </div>
@@ -52,6 +57,7 @@
                     <img src="./profile2.jpg" alt="Sutharsan" srcset="">
                 </div>
             </div>
+
         </div>
     </div>
     <section id="about" class="about">
@@ -72,7 +78,13 @@
                 workflows, and deliver innovative IT solutions that meet business needs.
             </p>
             <p><br>
-                Throughout my career, I have successfully supported diverse industries, including aviation, retail, and manufacturing, particularly within the Dubai market. My ability to adapt quickly to new technologies and environments has enabled me to streamline IT processes, reduce downtime, and improve user satisfaction. By combining technical support expertise with software development skills, I effectively automate routine tasks, develop custom tools, and contribute to continuous improvement initiatives. I am committed to delivering reliable, scalable solutions that drive operational efficiency and support business growth.
+                Throughout my career, I have successfully supported diverse industries, including aviation, retail, and
+                manufacturing, particularly within the Dubai market. My ability to adapt quickly to new technologies and
+                environments has enabled me to streamline IT processes, reduce downtime, and improve user satisfaction.
+                By combining technical support expertise with software development skills, I effectively automate
+                routine tasks, develop custom tools, and contribute to continuous improvement initiatives. I am
+                committed to delivering reliable, scalable solutions that drive operational efficiency and support
+                business growth.
             </p>
         </div>
     </section>
@@ -117,119 +129,152 @@
         </div>
     </section>
     <section id="experience" class="experience">
-       <div class="experience">
-  <h3 style="margin-top: 10%;">My Experience</h3>
-  <div class="list">
-    <div class="list1">
-      <div class="objects">
-        <div class="obj" data-title="Business Development Associate" data-type="Gandalf IT Services, Gurgaon">
-          <img style="width: 100%; height: 138px;" src="./project1.webp" alt="Gandalf IT Services Logo">
-        </div>
-      </div>
-      <div class="info">
-        <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
-        <p>Support and manage Retail ERP systems Microsoft Dynamics, GoFrugal, or custom solutions. Handle
-virtualized environments using VMware or Hyper-V, TCP/IP, VLANs, firewalls, and VPNs.
-• Maintain and support POS systems used in retail stores and AWS, Azure, or Google Cloud.
-• Ensure smooth operation of servers, networks, and hardware across all locations.</p>
-      </div>
-    </div>
-    <div class="list2">
-      <div class="objects">
-        <div class="obj" data-title="IT Support Engineer" data-type="Demoooooooooooo">
-          <img style="width: 100%; height: 276px;" src="./project2.png" alt="Expedia Logo">
-        </div>
-      </div>
-      <div class="info">
-        <h4>FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
-        <p>Implemented responsive UI/UX designs & Functionallity. Deployed applications to cloud platforms.
-Developed RESTful APIs. Troubleshot and debugged complex issues in both client and server side.
-• Design and maintain relational databases using SQL for efficient data storage, retrieval, optimization.
-• Collaborated with cross-functional teams of designers, QA engineers, and product managers.</p>
-      </div>
-    </div>
+        <div class="experience">
+            <h3 style="margin-top: 10%;">My Experience</h3>
+            <div class="list">
+                <div class="list1">
+                    <div class="objects">
+                        <div class="obj" data-title="Business Development Associate"
+                            data-type="Gandalf IT Services, Gurgaon">
+                            <img style="width: 100%; height: 138px;" src="./project1.webp"
+                                alt="Gandalf IT Services Logo">
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h4>IT Support Engineer – AL ADIL TRADING, Dubai, UAE</h4>
+                        <p>Support and manage Retail ERP systems Microsoft Dynamics, GoFrugal, or custom solutions.
+                            Handle
+                            virtualized environments using VMware or Hyper-V, TCP/IP, VLANs, firewalls, and VPNs.
+                            • Maintain and support POS systems used in retail stores and AWS, Azure, or Google Cloud.
+                            • Ensure smooth operation of servers, networks, and hardware across all locations.</p>
+                    </div>
+                </div>
+                <div class="list2">
+                    <div class="objects">
+                        <div class="obj" data-title="IT Support Engineer" data-type="Demoooooooooooo">
+                            <img style="width: 100%; height: 276px;" src="./project2.png" alt="Expedia Logo">
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h4>FULL STACK DEVELOPER - DNS GROUP, Delhi, India</h4>
+                        <p>Implemented responsive UI/UX designs & Functionallity. Deployed applications to cloud
+                            platforms.
+                            Developed RESTful APIs. Troubleshot and debugged complex issues in both client and server
+                            side.
+                            • Design and maintain relational databases using SQL for efficient data storage, retrieval,
+                            optimization.
+                            • Collaborated with cross-functional teams of designers, QA engineers, and product managers.
+                        </p>
+                    </div>
+                </div>
 
-    <div class="list3">
-      <div class="objects">
-        <div class="obj" data-title="Full Stack Developer" data-type="Al Adil Supermarket, Dubai">
-          <img style="width: 100%; height: 319px;" src="./cropped-logo-3-1.png" alt="Al Adil Logo">
-        </div>
-      </div>
-      <div class="info">
-        <h4>IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
-        <p>Provided technical support and troubleshooting for hardware, software, and network issues.
-• Maintained and updated IT infrastructure, ensuring optimal system performance and security.
-• Performed routine system and network monitoring, backups, and updates.
-• Collaborated with vendors and other departments to resolve complex IT issues efficiently.
-• Managed user accounts, permissions, and access rights through Active Directory.</p>
-      </div>
-    </div>
+                <div class="list3">
+                    <div class="objects">
+                        <div class="obj" data-title="Full Stack Developer" data-type="Al Adil Supermarket, Dubai">
+                            <img style="width: 100%; height: 319px;" src="./cropped-logo-3-1.png" alt="Al Adil Logo">
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h4>IT Support Admin – TRANSGUARD GROUP LLC, Dubai, UAE</h4>
+                        <p>Provided technical support and troubleshooting for hardware, software, and network issues.
+                            • Maintained and updated IT infrastructure, ensuring optimal system performance and
+                            security.
+                            • Performed routine system and network monitoring, backups, and updates.
+                            • Collaborated with vendors and other departments to resolve complex IT issues efficiently.
+                            • Managed user accounts, permissions, and access rights through Active Directory.</p>
+                    </div>
+                </div>
 
-    <div class="list4">
-      <div class="objects">
-        <div class="obj" data-title="Intern - Web Developer" data-type="XYZ Tech Solutions">
-          <img src="./createch.png" alt="">
+                <div class="list4">
+                    <div class="objects">
+                        <div class="obj" data-title="Intern - Web Developer" data-type="XYZ Tech Solutions">
+                            <img src="./createch.png" alt="">
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h4>Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
+                        <p>Employment Assistance for Ex- Servicemen Officers for DGR (Ministry of Defence) Indian Army.
+                            Maintaining their software on weekly basis & update which is provided by DGR.
+                            • Pharmaceutical Software solution for Army Hospital to manage and monitor inventory stocks
+                            efficiently.
+                            This system ensures that all pharmacy stock levels are tracked in real-time and provides
+                            automated alerts
+                            when stock quantities fall below predefined thresholds, improving inventory control and
+                            preventing stock
+                            outs.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="info">
-        <h4>Full Stack Developer – CREATECH SOFTWARE PVT. LTD, Delhi, India</h4>
-        <p>Employment Assistance for Ex- Servicemen Officers for DGR (Ministry of Defence) Indian Army.
-Maintaining their software on weekly basis & update which is provided by DGR.
-• Pharmaceutical Software solution for Army Hospital to manage and monitor inventory stocks efficiently.
-This system ensures that all pharmacy stock levels are tracked in real-time and provides automated alerts
-when stock quantities fall below predefined thresholds, improving inventory control and preventing stock
-outs.</p>
-      </div>
-    </div>
-  </div>
-</div>
 
     </section>
     <div class="contact" id="contact">
         <div class="container">
             <div class="box">
                 <h3>Contact</h3><br>
+                <!-- -----------------------------------contact from---------------------- -->
+                <div id="contact-form" class="contact-form-section">
+
+                    <form action="https://api.web3forms.com/submit" method="POST">
+
+                        <input type="hidden" name="access_key" value="40b9cb8d-6cab-4d76-af1e-b201cb7dbeef">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="text" id="name" name="name" placeholder="Name" required>
+                        <input type="email" id="email" placeholder="Email" name="email" required>
+                        <input type="tel" id="mobile" placeholder="Mobile Number" name="mobile" required
+                            pattern="[0-9]{10,15}">
+                        <textarea id="message" placeholder="Message" name="message" rows="5" required></textarea>
+                        <!-- Honeypot Spam Protection -->
+                        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+
+                <!-- -----------------------------------contact from---------------------- -->
                 <div class="text" id="contactme">
                     <p><i class="fas fa-envelope"></i> nailwalmohit28@gmail.com</p>
                     <div class="location">
-                        <p><i class="fa fa-location-arrow" aria-hidden="true" style='font-size:20px'></i> Dubai, United Arab Emirates</p>
+                        <p><i class="fa fa-location-arrow" aria-hidden="true" style='font-size:20px'></i> Dubai, United
+                            Arab Emirates</p>
                         <p></p><i class="fa fa-phone" style="font-size:16px"></i> +971-524792549</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <footer>
-    <div class="main-footer">
-        <div class="social-icons">
-            <a href="https://www.linkedin.com/in/nailwalmohit/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/positve_electron/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://x.com/Mohitnailwal1" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://github.com/MohitNailwal" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="tel:+91 6380657002"><i class="fa fa-phone"></i></a>
-            <a href="mailto:nailwalmohit28@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        <div class="main-footer">
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/nailwalmohit/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/positve_electron/" target="_blank"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="https://x.com/Mohitnailwal1" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://github.com/MohitNailwal" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="tel:+91 6380657002"><i class="fa fa-phone"></i></a>
+                <a href="mailto:nailwalmohit28@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 
- <script>   
-    const hamburger = document.getElementById('hamburger');
-    const navLinks = document.getElementById('nav-links');
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
 
-    hamburger.addEventListener('click', () => {
-      hamburger.classList.toggle('active');
-      navLinks.classList.toggle('active');
-    });
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
 
-    // Optional: Close menu on link click (mobile)
-    navLinks.querySelectorAll('a').forEach(link => {
-      link.addEventListener('click', () => {
-        hamburger.classList.remove('active');
-        navLinks.classList.remove('active');
-      });
-    });
-  </script>
+        // Optional: Close menu on link click (mobile)
+        navLinks.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('active');
+            });
+        });
+    </script>
 </body>
+
 </html>
